--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     }
 
     #desktop {
-      display: none;
+      display: block;
       width: 100%;
       height: 100%;
       background: #fff url('assets/wallpapers/default.jpg') center/cover no-repeat;
@@ -202,13 +202,7 @@
     <div id="boot-spinner"></div>
   </div>
 
-  <!-- Login Screen -->
-  <div id="login-screen">
-    <input id="username" placeholder="Username" />
-    <input id="password" type="password" placeholder="Password" />
-    <button onclick="login()">Login</button>
-    <div id="login-error" style="color:red; font-size:14px;"></div>
-  </div>
+ 
 
   <!-- Desktop Environment -->
   <div id="desktop">
@@ -245,14 +239,8 @@
     let zIndex = 1000;
 
     function login() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-      if (user === "hamzah" && pass === "1989") {
         document.getElementById("login-screen").style.display = "none";
         document.getElementById("desktop").style.display = "block";
-      } else {
-        document.getElementById("login-error").innerText = "Incorrect username or password.";
-      }
     }
 
     function toggleStartMenu() {
