--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      background: #fff url('assets/wallpapers/default.jpg') center/cover no-repeat;
+      background: #fff url('IMG_1219.jpeg') center/cover no-repeat;
       position: relative;
     }
 
